# SplashDrone4-SDK

./: .gitignore  CITATION.cff  CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py
config/: test.rviz
data/: data_log_19691231_190423.h5  data_log_19691231_190629.h5  data_log_19691231_190751.h5  data_log_19691231_190929.h5  data_log_19691231_191039.h5  data_log_19691231_191152.h5  data_log_20250620_141201.h5  data_log_20250620_141339.h5  data_log_20250620_141435.h5  data_log_20250620_141941.h5  data_log_20250620_142103.h5  data_log_20250620_142153.h5  data_log_20250620_142237.h5  data_log_20250630_101219.h5  data_log_20250630_101532.h5  data_log_20250630_101725.h5  data_log_20250630_101841.h5  data_log_20250630_102007.h5  data_log_20250630_102139.h5  data_log_20250630_102311.h5  data_log_20250630_102431.h5  data_log_20250630_102538.h5  data_log_20250630_102652.h5  data_log_20250630_103652.h5  data_log_20250630_103913.h5  data_log_20250630_104021.h5  data_log_20250630_104128.h5  data_log_20250630_104233.h5  data_log_20250630_104347.h5  data_log_20250630_104454.h5  data_log_20250630_104605.h5  data_log_20250630_104720.h5  data_log_20250630_105001.h5  data_log_20250729_192610.h5  data_log_20250729_192904.h5  data_log_20250729_193044.h5  data_log_20250729_193243.h5  data_log_20250729_193428.h5  data_log_20250729_193631.h5  data_log_20250729_193755.h5
include/: BatteryInfo.h  CRC.h  Controls.h  Definitions.h  DeviceInfo.h  FC-Setting.h  FlyStateReport.h  Gimbal.h  NavStateReport.h  UMBUS.h  battery_info.h  controls.h  crc.h  device_info.h  fly_state_report.h  nav_state_report.h  umbus.h
launch/: follow_me.launch  start_all.launch  start_all.launch.py  vis_bag.launch  vis_bag.launch.py
maps/: wabash_downstream.html  wabash_downstream_0729.html  wabash_upstream.html  wabash_upstream_0729.html  wabash_upstream_0910.html
scripts/: FollowMe.py  GUI.py  ImageProcess.py  Odom.py  RosUtils.py  ZMQ-GUI.py  bag_recorder.py  constants.py  data_logger.py  definitions.py  follow_me.py  freshest_frame.py  image_processor.py  key2action.py  keyboard_control.py  led_onoff_test.py  move3d_test.py  ros_utils.py  waypoint_test.py  zmq_gui.py  zmq_interface.py
splashdrone4/: bag_recorder.py  constants.py  data_logger.py  data_reader.py  definitions.py  follow_me.py  freshest_frame.py  gui.py  gui_tk.py  (+15 more)
(+11 files in other folders)
